objects/Forecast_Snapshot__c.object
<CustomObject>
    <description>This custom object is used to snapshot opportunity and part forecasting values.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BU_Profit_Center_Snapshot__c</fullName>
        <label>BU Profit Center Snapshot</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Profit_Center__c</fullName>
        <formula>Part__r.BU_profit_center__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Profit Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_Age__c</fullName>
        <formula>DATEVALUE ( CreatedDate ) - (Won_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_Value__c</fullName>
        <formula>CASE(
Process_Status__c ,
&apos;Production&apos;, Amount__c ,
&apos;Ramp-down&apos;, Amount__c ,
&apos;EOL&apos;, Amount__c ,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Count Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Pipeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Count Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_since_last_user_update__c</fullName>
        <label>Days since last user update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Amount__c</fullName>
        <label>Direct Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY13_BR_value__c</fullName>
        <formula>IF(TEXT(CurrencyIsoCode)=&apos;EUR&apos;, (Amount__c  * 1.25), 
IF(TEXT(CurrencyIsoCode)=&apos;JPY&apos;, (Amount__c  * 0.01266),
IF(TEXT(CurrencyIsoCode)=&apos;CNY&apos;, (Amount__c  * 0.15723),
IF(TEXT(CurrencyIsoCode)=&apos;EGP&apos;, (Amount__c  * 0.165), 
IF(TEXT(CurrencyIsoCode)=&apos;CHF&apos;, (Amount__c  * 1.0345),
IF(TEXT(CurrencyIsoCode)=&apos;PLN&apos;, (Amount__c  * 0.2893),
IF(TEXT(CurrencyIsoCode)=&apos;NZD&apos;, (Amount__c  * 0.7863),
IF(TEXT(CurrencyIsoCode)=&apos;AUD&apos;, (Amount__c  * 1.0026),
IF(TEXT(CurrencyIsoCode)=&apos;CAD&apos;, (Amount__c  * 0.9674), 
IF(TEXT(CurrencyIsoCode)=&apos;CZK&apos;, (Amount__c  * 0.04816),
IF(TEXT(CurrencyIsoCode)=&apos;DKK&apos;, (Amount__c  * 0.1672),
IF(TEXT(CurrencyIsoCode)=&apos;GBP&apos;, (Amount__c  * 1.5507), 
IF(TEXT(CurrencyIsoCode)=&apos;HUF&apos;, (Amount__c  * 0.00429),
IF(TEXT(CurrencyIsoCode)=&apos;INR&apos;, (Amount__c  * 0.01751),
IF(TEXT(CurrencyIsoCode)=&apos;KRW&apos;, (Amount__c  * 0.00086), 
IF(TEXT(CurrencyIsoCode)=&apos;MYR&apos;, (Amount__c  * 0.3129),
IF(TEXT(CurrencyIsoCode)=&apos;TWD&apos;, (Amount__c  * 0.0334),
Amount__c
)))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY13 BR value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <label>Fiscal Quarter</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Quarter__c</fullName>
        <formula>Fiscal_Year__c &amp; &quot;-&quot; &amp; Fiscal_Quarter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Date__c</fullName>
        <label>Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User object to store the Forecast Owner.</description>
        <label>Forecast Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forecast_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Region__c</fullName>
        <formula>LEFT(IF(INCLUDES( Opportunity__r.Fulfillment_Region__c , &quot;Americas&quot;), &quot;Americas&quot; + &quot;,&quot;, NULL)  +
IF(INCLUDES( Opportunity__r.Fulfillment_Region__c , &quot;China&quot;), &quot;China&quot;+ &quot;,&quot;, NULL)  +
IF(INCLUDES( Opportunity__r.Fulfillment_Region__c , &quot;EMEA&quot;), &quot;EMEA&quot; + &quot;,&quot;, NULL) +
IF(INCLUDES( Opportunity__r.Fulfillment_Region__c , &quot;Japan&quot;), &quot;Japan&quot; + &quot;,&quot;, NULL) +
IF(INCLUDES( Opportunity__r.Fulfillment_Region__c , &quot;Korea&quot;), &quot;Korea&quot; + &quot;,&quot;, NULL) +
IF(INCLUDES( Opportunity__r.Fulfillment_Region__c , &quot;South Asia (Pacific)&quot;), &quot;South Asia (Pacific)&quot; + &quot;,&quot;, NULL) +
IF(INCLUDES( Opportunity__r.Fulfillment_Region__c , &quot;Taiwan&quot;), &quot;Taiwan,&quot;,  NULL),LEN(IF(INCLUDES( Opportunity__r.Fulfillment_Region__c , &quot;Americas&quot;), &quot;Americas&quot; + &quot;,&quot;, NULL)  +
IF(INCLUDES( Opportunity__r.Fulfillment_Region__c , &quot;China&quot;), &quot;China&quot;+ &quot;,&quot;, NULL)  +
IF(INCLUDES( Opportunity__r.Fulfillment_Region__c , &quot;EMEA&quot;), &quot;EMEA&quot; + &quot;,&quot;, NULL) +
IF(INCLUDES( Opportunity__r.Fulfillment_Region__c , &quot;Japan&quot;), &quot;Japan&quot; + &quot;,&quot;, NULL) +
IF(INCLUDES( Opportunity__r.Fulfillment_Region__c , &quot;Korea&quot;), &quot;Korea&quot; + &quot;,&quot;, NULL) +
IF(INCLUDES( Opportunity__r.Fulfillment_Region__c , &quot;South Asia (Pacific)&quot;), &quot;South Asia (Pacific)&quot; + &quot;,&quot;, NULL) +
IF(INCLUDES( Opportunity__r.Fulfillment_Region__c , &quot;Taiwan&quot;), &quot;Taiwan,&quot;,  NULL))-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfillment Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Massproduction_date__c</fullName>
        <label>Mass production date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Business_Amount__c</fullName>
        <description>APL used to calculate new business amount</description>
        <formula>Amount__c * Opportunity__r.New_Business_Percentage_Numberical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Value__c</fullName>
        <formula>CASE(
Process_Status__c ,
&apos;Concept&apos;, Amount__c ,
&apos;Demo&apos;, Amount__c ,
&apos;Designed&apos;, Amount__c ,
&apos;Prototyped/Sampled&apos;, Amount__c ,
&apos;Quoted&apos;, Amount__c ,
&apos;Pre-prod&apos;, Amount__c ,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oportunity_age_days__c</fullName>
        <formula>DATEVALUE ( CreatedDate ) - DATEVALUE(  Opportunity__r.CreatedDate  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oportunity age (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Id__c</fullName>
        <label>Opportunity Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <description>This field contains the Opportunity stage of snapshot.</description>
        <label>Opportunity Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Approval</fullName>
                </value>
                <value>
                    <fullName>Mass-prod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Master-Detail Relationship to Opportunity.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Forecast Snapshots</relationshipLabel>
        <relationshipName>Forecast_Snapshots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Orignal_Region__c</fullName>
        <formula>TEXT( Opportunity__r.Original_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orignal Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLMID__c</fullName>
        <label>PLM ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS_Amount__c</fullName>
        <label>POS Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Confidence__c</fullName>
        <description>This field contains the confidence of related part.</description>
        <label>Part Confidence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_PLMID_matches_Opp_PLMID__c</fullName>
        <formula>IF( Opportunity__r.PLM_Id__c = Part__r.PLM_ID__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part PLMID matches Opp PLMID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Won_Fiscal_Quarter__c</fullName>
        <label>Part Won Fiscal Quarter</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Won_Fiscal_Year__c</fullName>
        <label>Part Won Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Relationship to Opportunity Part.</description>
        <label>Part</label>
        <referenceTo>Opportunity_Part__c</referenceTo>
        <relationshipLabel>Forecast Snapshots</relationshipLabel>
        <relationshipName>Forecast_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pipeline_Indicator__c</fullName>
        <formula>IF(AND(Date__c &gt; DATEVALUE(CreatedDate), Date__c &lt;  DATEVALUE(CreatedDate) + 350), &quot;1&quot;, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_Value__c</fullName>
        <description>calculated pipeline value (4qtr. sroling for the record)</description>
        <label>Pipeline Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Status__c</fullName>
        <description>This field contains the process status of the related oppy part.</description>
        <label>Process Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProvideQuotation_date__c</fullName>
        <label>Provide Quotation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuotationDue_Date__c</fullName>
        <label>Quotation Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuotationRequest_Date__c</fullName>
        <label>Quotation Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>S_OP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>S&amp;OP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Snapshot_Type__c</fullName>
        <description>This field shows out of which snapshot the record was created.</description>
        <label>Snapshot Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>FY13 final</fullName>
                </value>
                <value>
                    <fullName>FY14 Final</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>FY15 Final</fullName>
                </value>
                <value>
                    <fullName>FY 16 Final</fullName>
                </value>
                <value>
                    <fullName>FY17 Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>This field contains the Created Date of Forecasting record.</description>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TwoYears_Revenue__c</fullName>
        <label>Two Years Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Won_Date_Formula_del__c</fullName>
        <formula>Part__r.Won_Date__c</formula>
        <label>Won Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Won_Date__c</fullName>
        <description>This field contains the Won Date of the related Oppy Part.</description>
        <label>Won Date</label>
        <type>Date</type>
    </fields>
    <label>Forecast Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Opportunity__c</columns>
        <columns>Amount__c</columns>
        <columns>Date__c</columns>
        <columns>Snapshot_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity__c</field>
            <operation>equals</operation>
            <value>al migdaf</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FS-{000000}</displayFormat>
        <label>Forecast Snapshot</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Snapshots</pluralLabel>
    <recordTypes>
        <fullName>Opportunity</fullName>
        <active>true</active>
        <label>Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Part</fullName>
        <active>true</active>
        <label>Part</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>